<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".profileActivity">

    <include layout="@layout/app_bar"
        android:id="@+id/profile_appbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_dp_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="106dp"
        android:src="@drawable/dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_appbar" />

    <TextView
        android:id="@+id/profile_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="166dp"
        android:text="@string/Name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_dp_img" />

    <TextView
        android:id="@+id/profile_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="107dp"
        android:text="@string/hi_there_i_m_using_macky"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_tv" />

    <Button
        android:id="@+id/request_btn"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="116dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/send_request"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_total_friends_tv" />

    <TextView
        android:id="@+id/profile_total_friends_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="176dp"
        android:text="@string/total_friends"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_status_tv" />

    <Button
        android:id="@+id/decline_request_btn"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="116dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/decline_friend_request"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_btn" />

    <Button
        android:id="@+id/change_profile_btn"
        android:layout_width="165dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/change_details"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_total_friends_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>