<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/start_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="27dp"
        android:text="@string/welcome_to_macky_the_chating_app"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/btn_green_background"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_tv" />

    <Button
        android:id="@+id/newaccount_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/btn_red_background"
        android:text="@string/create_a_new_account"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ImageView
        android:id="@+id/Mian_logo_img"
        android:layout_width="268dp"
        android:layout_height="292dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/start_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/macky" />
</androidx.constraintlayout.widget.ConstraintLayout>