<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".profileActivity">

    <include layout="@layout/app_bar"
        android:id="@+id/profile_view_appbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_view_dp_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="106dp"
        android:src="@drawable/dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_appbar" />

    <TextView
        android:id="@+id/profile_view_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="166dp"
        android:text="@string/Name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_dp_img" />

    <TextView
        android:id="@+id/profile_view_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="107dp"
        android:text="@string/hi_there_i_m_using_macky"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_name_tv" />

    <Button
        android:id="@+id/message_btn"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="141dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/send_message"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_total_friends_tv" />

    <TextView
        android:id="@+id/profile_view_total_friends_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="176dp"
        android:text="@string/total_friends"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_status_tv" />

    <Button
        android:id="@+id/unfriend_btn"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="141dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/unfriend"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>