<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".audioCallReceivingActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/audio_receiving_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/Name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/audio_receiving_connection_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ringing"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_receiving_name_tv" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/audio_receiving_user_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_receiving_connection_type_tv" />

    <ImageView
        android:id="@+id/audio_receiving_pickup_call_img"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_receiving_user_img"
        app:srcCompat="@mipmap/answer_call_img" />

    <ImageView
        android:id="@+id/audio_receiving_end_call_img"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_receiving_user_img"
        app:srcCompat="@mipmap/end_call_img" />

    <TextView
        android:id="@+id/audio_receiving_mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="175dp"
        android:text="@string/calling_mode"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_receiving_connection_type_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>