<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chat_dp_img"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/dp"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/chat_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:maxLength="30"
        android:text="@string/Name"
        android:textColor="@color/darkwhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chat_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/last_seen"
        android:textColor="@color/lightwhite" />

    <ImageView
        android:id="@+id/chat_bar_online_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:srcCompat="@mipmap/online_image" />

    <ImageView
        android:id="@+id/chat_bar_offline_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/offline_image" />

    <ImageView
        android:id="@+id/chat_bar_audio_call_img"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/chat_dp_img"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/chat_call_img" />

</RelativeLayout>