<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".settingsActivity">

    <include layout="@layout/app_bar"
        android:id="@+id/settings_appbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_dp_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="106dp"
        android:src="@drawable/dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="166dp"
        android:text="@string/Name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_dp_img" />

    <TextView
        android:id="@+id/settings_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="107dp"
        android:text="@string/hi_there_i_m_using_macky"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_name_tv" />

    <Button
        android:id="@+id/change_status_btn"
        android:layout_width="165dp"
        android:layout_height="32dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="123dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/change_details"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_status_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
