<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/users_single_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_single_dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/user_single_dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:maxLength="24"
        android:text="@string/user_default_status"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_single_dp"
        app:layout_constraintTop_toBottomOf="@+id/user_single_name" />

    <ImageView
        android:id="@+id/user_single_online_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/user_single_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/online_image" />

    <ImageView
        android:id="@+id/user_single_offline_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/user_single_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/offline_image" />

</androidx.constraintlayout.widget.ConstraintLayout>